<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.holamundo.Principal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtNumeroUno"
            android:hint="@string/numero1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtNumeroDos"
            android:hint="@string/numero2" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:text="@string/calcular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/cmdCalcular"
                    android:onClick="calcular" />

                <Button
                    android:text="@string/restar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cmdRestar"
                    android:layout_weight="1"
                    android:onClick="restar" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:text="@string/multiplicar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cmdMultiplicar"
                    android:layout_weight="1"
                    android:onClick="multiplicar" />

                <Button
                    android:text="@string/dividir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cmdDividir"
                    android:onClick="dividir"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:text="@string/borrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cmdBorrar"
            android:onClick="borrar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtResultado"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="normal|bold" />
    </LinearLayout>
</RelativeLayout>
